--- a/assets/static/styles/styles.styl
+++ b/assets/static/styles/styles.styl
@@ -9,4 +9,5 @@
 
 @import 'components/_header.styl'
 @import 'components/_nav.styl'
+@import 'components/_social.styl'
 @import 'components/_footer.styl'
