--- a/assets/pug/index.pug
+++ b/assets/pug/index.pug
@@ -7,6 +7,8 @@ block content
     // main content
     main.page__main
         
-        
-        
+        //- Header 
+        include modules/_header
+        //- Header end
+
     // main content end
