Добавлена секция hero

--- a/assets/pug/index.pug
+++ b/assets/pug/index.pug
@@ -11,4 +11,14 @@ block content
         include modules/_header
         //- Header end
 
+        section.sect.hero
+            .container
+                .hero__row
+                    .hero__col
+                        .hero__cont
+                            .hero__desc
+                                h1.hero__title Free portfolio template
+                                span for photographers
+
+                            a(href="javascript:void(0);").hero__btn.btn.btn_color_golden Discover
     // main content end
