--- a/assets/pug/modules/_header.pug
+++ b/assets/pug/modules/_header.pug
@@ -6,7 +6,7 @@ header.header
             //- Navigator end
 
             //- Logo
-            .header__logo.logo
+            .header__banner.banner
                 a(href="javascript:void(0);")
                     img(src="images/general/logo.png", alt="logo pic")
             //- Logo end
