--- a/assets/static/styles/components/_header.styl
+++ b/assets/static/styles/components/_header.styl
@@ -1,3 +1,10 @@
+.header
+    position absolute
+    top 0
+    left 0
+    z-index $z-index3
+    width 100%
+
 .header__inner
     display flex
     padding 36px 0
