Добвалена секция collection

--- a/assets/pug/index.pug
+++ b/assets/pug/index.pug
@@ -11,6 +11,7 @@ block content
         include modules/_header
         //- Header end
 
+        //- Hero section 
         section.sect.hero
             .container
                 .hero__row
@@ -21,4 +22,59 @@ block content
                                 span for photographers
 
                             a(href="javascript:void(0);").hero__btn.btn.btn_color_golden Discover
+        //- Hero section end
+
+        //- Collection section
+        section.sect.coll
+            .container
+                //- Row-1
+                .coll__row
+                    .coll__col
+                        .coll__img
+                            img(src="images/content/collection/img-1.png", alt="collection pic")
+                    .coll__col
+                        .coll__cont
+                            .coll__desc
+                                h2 B&amp;W Collection
+                                p 
+                                    | They were six beautiful children but the youngest was the prettiest of them all. 
+                                    | Her skin was as clear and delicate as a rose-leaf and her eyes as blue as the deepest sea. 
+                                    | But like all the others she had no feet and her body ended in a fish’s tail.
+                            
+                            a(href="javascript:void(0);").coll__btn.btn.btn_color_golden More
+                //- Row-1 end
+
+                //- Row-2
+                .coll__row
+                    .coll__col
+                        .coll__cont
+                            .coll__desc
+                                h2 Mother Earth
+                                p
+                                    | And racism will be dead, for variety will then be the great fact of Humanity, and not uniformity. 
+                                    | Mother Earth will finally have given birth not to merely a Terrestrian, but to a Galactic Empire.
+
+                            a(href="javascript:void(0);").coll__btn.btn.btn_color_golden More
+                    .coll__col
+                        .coll__img
+                            img(src="images/content/collection/img-2.png", alt="collection pic")
+                //- Row-2 end
+
+                //- Row-3
+                .coll__row
+                    .coll__col
+                        .coll__img
+                            img(src="images/content/collection/img-3.png", alt="collection pic")
+                    .coll__col
+                        .coll__cont
+                            .coll__desc
+                                h2 Portraits
+                                p
+                                    | 'Yes, we went to school in the sea, though you mayn't believe it—' 'I never said I didn't!' interrupted Alice. 
+                                    | 'You did,' said the Mock Turtle. 'Hold your tongue!' added the Gryphon, before Alice could speak again.
+                            
+                            a(href="javascript:void(0);").coll__btn.btn.btn_color_golden More
+                //- Row-3 end
+        //- Collection section end
+
     // main content end
