--- a/assets/static/styles/styles.styl
+++ b/assets/static/styles/styles.styl
@@ -30,6 +30,26 @@
         font-size 24px
         line-height 36px
 
+.coll
+    padding 120px 0
+    .container
+        padding 0
+
+.coll__row
+    display flex
+    justify-content space-between
+
+.coll__col
+    width 50%
+
+.coll__cont
+    padding 50px 120px 38px 60px
+
+.coll__desc 
+    margin-bottom 62px
+    h2
+        margin-bottom 42px
+
 @import 'components/_buttons.styl'
 @import 'components/_header.styl'
 @import 'components/_nav.styl'
