--- a/assets/static/styles/styles.styl
+++ b/assets/static/styles/styles.styl
@@ -50,9 +50,17 @@
     h2
         margin-bottom 42px
 
+.cont
+    padding 120px 0 56px 0
+
+.cont__title
+    margin-bottom 60px
+    text-align center
+
 @import 'components/_buttons.styl'
 @import 'components/_header.styl'
 @import 'components/_nav.styl'
 @import 'components/_logo.styl'
 @import 'components/_social.styl'
+@import 'components/_form.styl'
 @import 'components/_footer.styl'
