--- a/assets/static/styles/layout/_layout.styl
+++ b/assets/static/styles/layout/_layout.styl
@@ -48,6 +48,7 @@ button
     color inherit
     font inherit
     line-height normal
+    cursor pointer
     -webkit-font-smoothing inherit
     -moz-osx-font-smoothing inherit
     -webkit-appearance none
