--- a/assets/pug/index.pug
+++ b/assets/pug/index.pug
@@ -105,4 +105,8 @@ block content
                                 button(type="submit").form__btn.form__btn_type_submit.btn.btn_color_golden Send
         //- Contact section end
 
+        //- Footer 
+        include modules/_footer
+        //- Footer end
+
     // main content end
