Добавлена секция recent

--- a/assets/pug/index.pug
+++ b/assets/pug/index.pug
@@ -24,6 +24,31 @@ block content
                             a(href="javascript:void(0);").hero__btn.btn.btn_color_golden Discover
         //- Hero section end
 
+        //- Recent works section
+        section.sect.recent
+            .container
+                h2.recent__title Recent works
+
+                //- Row-1 
+                .recent__row
+                    .recent__col.recent__col_desktop_md
+                        .recent__work
+                            img(src="images/content/recent/img-1.png", alt="recent work pic")
+                    .recent__col.recent__col_desktop_sm
+                        .recent__work
+                            img(src="images/content/recent/img-2.png", alt="recent work pic")
+                        .recent__work
+                            img(src="images/content/recent/img-3.png", alt="recent work pic")
+                //- Row-1 end
+
+                //- Row-2
+                .recent__row
+                    .recent__col
+                        .recent__work
+                            img(src="images/content/recent/img-4.png", alt="recent work pic")
+                //- Row-2 end
+        //- Recent works section end
+
         //- Collection section
         section.sect.coll
             .container
