--- a/assets/static/styles/styles.styl
+++ b/assets/static/styles/styles.styl
@@ -30,6 +30,29 @@
         font-size 24px
         line-height 36px
 
+.recent
+    padding 120px 0
+
+.recent__title
+    margin-bottom 58px
+    text-align center
+
+.recent__row
+    display flex
+    justify-content: space-between
+    &:not(:last-child)
+        margin-bottom 20px
+
+.recent__col
+    width 100%
+    &_desktop_md
+        width 66%
+    &_desktop_sm
+        width 31.5%
+        .recent__work
+            &:not(:last-child)
+                margin-bottom 27px
+
 .coll
     padding 120px 0
     .container
