Перфект пиксель в секциях кроме collection

--- a/assets/static/styles/styles.styl
+++ b/assets/static/styles/styles.styl
@@ -5,6 +5,11 @@
 
 @import 'layout/_layout.styl'
 
+@import 'components/_social.styl'
+@import 'components/_logo.styl'
+@import 'components/_buttons.styl'
+@import 'components/_form.styl'
+
 .hero
     background url('images/content/hero/backgroundImageHero.png') no-repeat center / cover
 
@@ -20,21 +25,21 @@
     text-align center
 
 .hero__desc
-    margin-bottom 124px
+    margin-bottom 116px
 
 .hero__title
     font-size 60px
     line-height 90px
     color primaryGoldenColor
     & + span 
-        font-size 24px
-        line-height 36px
+        font-size 28px
+        line-height 41px
 
 .recent
-    padding 120px 0
+    padding 114px 0
 
 .recent__title
-    margin-bottom 58px
+    margin-bottom 46px
     text-align center
 
 .recent__row
@@ -54,7 +59,7 @@
                 margin-bottom 27px
 
 .coll
-    padding 120px 0
+    padding 118px 0
     .container
         padding 0
 
@@ -66,24 +71,23 @@
     width 50%
 
 .coll__cont
-    padding 50px 120px 38px 60px
+    padding 54px 120px 38px 60px
 
 .coll__desc 
-    margin-bottom 62px
+    margin-bottom 56px
     h2
-        margin-bottom 42px
+        margin-bottom 22px
+
+.coll__btn
+    padding 0 56px
 
 .cont
-    padding 120px 0 56px 0
+    padding 120px 0 52px 0
 
 .cont__title
-    margin-bottom 60px
+    margin-bottom 48px
     text-align center
 
-@import 'components/_social.styl'
 @import 'components/_nav.styl'
-@import 'components/_logo.styl'
-@import 'components/_buttons.styl'
 @import 'components/_header.styl'
-@import 'components/_form.styl'
 @import 'components/_footer.styl'
