Идеальный пиксель для секции collection

--- a/assets/static/styles/styles.styl
+++ b/assets/static/styles/styles.styl
@@ -69,9 +69,13 @@
 
 .coll__col
     width 50%
+    .coll__img
+        height 100%
+        img 
+            height inherit
 
 .coll__cont
-    padding 54px 120px 38px 60px
+    padding 54px 120px 38px 58px
 
 .coll__desc 
     margin-bottom 56px
