--- a/assets/static/styles/components/_header.styl
+++ b/assets/static/styles/components/_header.styl
@@ -10,3 +10,17 @@
     padding 24px 0
     align-items center
     justify-content space-between
+    @media (orientation portrait) and (max-width 1024px)
+        padding 28px 24px
+
+.header__navbar
+    @media (orientation portrait) and (max-width 1024px)
+        order 2
+
+.header__banner
+    @media (orientation portrait) and (max-width 1024px)
+        order 1
+
+.header__social
+    @media (orientation portrait) and (max-width 1024px)
+        display none
