--- a/assets/static/styles/styles.styl
+++ b/assets/static/styles/styles.styl
@@ -54,7 +54,7 @@
         width 66%
     &_desktop_sm
         width 31.5%
-        .recent__work
+        .recent__work`
             &:not(:last-child)
                 margin-bottom 27px
 
