--- a/assets/pug/modules/_header.pug
+++ b/assets/pug/modules/_header.pug
@@ -2,7 +2,11 @@ header.header
     .container
         .header__inner
             //- Navigator
-            include _nav
+            .header__navbar
+                button(type="button").navbar-toggle.collapsed
+                    span
+                    span
+                include _nav
             //- Navigator end
 
             //- Logo
