Идеальный пиксель tablet

--- a/assets/pug/index.pug
+++ b/assets/pug/index.pug
@@ -25,7 +25,7 @@ block content
         //- Hero section end
 
         //- Recent works section
-        //- section.sect.recent
+        section.sect.recent
             .container
                 h2.recent__title Recent works
 
@@ -50,7 +50,7 @@ block content
         //- Recent works section end
 
         //- Collection section
-        //- section.sect.coll
+        section.sect.coll
             .container
                 //- Row-1
                 .coll__row
