--- a/assets/static/styles/components/_header.styl
+++ b/assets/static/styles/components/_header.styl
@@ -11,7 +11,7 @@
     align-items center
     justify-content space-between
     @media (orientation portrait) and (max-width 1024px)
-        padding 28px 24px
+        padding 28px 0
 
 .header__navbar
     @media (orientation portrait) and (max-width 1024px)
