--- a/assets/static/styles/components/_buttons.styl
+++ b/assets/static/styles/components/_buttons.styl
@@ -1,9 +1,9 @@
 .btn
     display inline-block
-    height 56px
-    padding 0 66px
-    font 18px baseFontBold
-    line-height 52px
+    height (56em/18)
+    padding 0 (66em/18)
+    font (18em/16) baseFontBold
+    line-height (52em/18)
     text-transform uppercase
     border 2px solid primaryBlackColor 
     opacity .7
