--- a/assets/static/styles/components/_footer.styl
+++ b/assets/static/styles/components/_footer.styl
@@ -1,8 +1,8 @@
 .footer
-    padding-bottom 60px
+    padding-bottom (60em/16)
 
 .footer__title
-    margin-bottom 22px
+    margin-bottom (22em/16)
     font-size inherit 
     line-height inherit
     font-family baseFont
