--- a/assets/static/styles/components/_form.styl
+++ b/assets/static/styles/components/_form.styl
@@ -1,9 +1,9 @@
 .form
-    max-width 370px
+    max-width (370em/16)
     margin 0 auto
 
 .form__field
-    margin-bottom 20px
+    margin-bottom (20em/16)
     border-left 1px solid primaryGreyColor
     border-right 1px solid primaryGreyColor
 
@@ -16,7 +16,7 @@
 .form__input
     display block
     width 100%
-    padding 18px
+    padding (18em/16)
     border none
     border-top 1px solid primaryGreyColor
     border-bottom 1px solid primaryGreyColor
