--- a/assets/static/styles/components/_nav.styl
+++ b/assets/static/styles/components/_nav.styl
@@ -18,11 +18,11 @@
             background-color #fff
     li
         &:not(:last-child)
-            margin-right 30px
+            margin-right 1.875em
             @media (orientation portrait) and (max-width 1024px)
-                margin 0 0 30px 0
+                margin 0 0 1.875em 0
     a
-        font 16px / 36px baseFontBold
+        font 1em / 2.25em baseFontBold
         color primaryGreyColor
         &:hover
             color inherit
