--- a/assets/static/styles/components/_social.styl
+++ b/assets/static/styles/components/_social.styl
@@ -4,7 +4,7 @@
         align-items center
     li
         &:not(:last-child)
-            margin-right 24px
+            margin-right (24em/16)
     a
         display block
         &.social__bh
