--- a/assets/static/styles/components/_header.styl
+++ b/assets/static/styles/components/_header.styl
@@ -7,11 +7,11 @@
 
 .header__inner
     display flex
-    padding 24px 0
+    padding 1.5em 0
     align-items center
     justify-content space-between
     @media (orientation portrait) and (max-width 1024px)
-        padding 28px 0
+        padding 1.75em 0
 
 .header__navbar
     @media (orientation portrait) and (max-width 1024px)
